--- a/index.html
+++ b/index.html
@@ -12,89 +12,23 @@
       background-color: #e9f5f2;
       color: #00332e;
     }
+
     .logo {
-      max-height: 100px;
+      max-height: 120px;
       display: block;
       margin: 0 auto 2rem;
     }
-    nav {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 2rem;
-      background-color: #d5f2ed;
-      padding: 1rem;
-    }
-    nav a {
-      text-decoration: none;
-      color: #004d43;
-      font-weight: bold;
-      font-size: 1.1rem;
-      transition: color 0.3s ease;
-    }
-    nav a:hover {
-      color: #002621;
-    }
-    main {
-      background: #ffffffcc;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-      padding: 3rem 2rem;
-      max-width: 800px;
-      margin: 3rem auto;
+
+    .site-title {
       text-align: center;
-    }
-    h2 {
       font-family: 'Playfair Display', serif;
-      color: #0a9396;
-      font-size: 2.2rem;
-      margin-bottom: 1rem;
+      font-size: 2.4rem;
+      color: #004d43;
+      margin-top: 1.5rem;
+      margin-bottom: 0.5rem;
+      opacity: 0;
+      animation: fadeInTitle 1.5s ease-out forwards;
     }
-    p {
-      font-size: 1.15rem;
-      line-height: 1.8;
-      margin-bottom: 2rem;
-    }
-    .story-link {
-      font-weight: bold;
-      font-size: 1.1rem;
-      color: #007f5f;
-      text-decoration: none;
-    }
-    .story-link:hover {
-      text-decoration: underline;
-    }
-    footer {
-      text-align: center;
-      padding: 1rem;
-      background: #d7f0e9;
-      color: #001219;
-    }
-  </style>
-</head>
-<body>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="wisdom.html">Wisdom</a>
-    <a href="poetry.html">Poetry</a>
-    <a href="herbal.html">Herbal</a>
-    <a href="about.html">About</a>
-    <a href="contact.html">Contact</a>
-  </nav>
 
-  <main>
-    <img src="logo.png" alt="ChatGPT-Crafted Wisdom Logo" class="logo">
-
-    <h2>Welcome</h2>
-    <p>This space is dedicated to exploring thought-provoking ideas—blending ancient traditions, philosophical reflections, and the potential of modern technology and AI. Dive into articles on herbal medicine, the nature of consciousness, emotional intelligence, and more.</p>
-
-    <h2>Featured Poem</h2>
-    <p>A poetic story for those who burn brightly and walk between worlds.</p>
-    <p><a href="fire-carrier-beautiful-updated.html" class="story-link">Read: The Fire Carrier →</a></p>
-  </main>
-
-  <footer>
-    &copy; 2025 ChatGPT-Crafted Wisdom. All rights reserved.
-  </footer>
-</body>
-</html>
+    @keyframes fadeInTitle {
+      from { opacity: 0; transform:
