--- a/about.html
+++ b/about.html
@@ -3,19 +3,109 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>About - ChatGPT-Crafted Wisdom</title>
+  <title>About</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Open+Sans&display=swap" rel="stylesheet">
-  <style>body{font-family:'Open Sans',sans-serif;margin:0;padding:0;background:#f4f9f4;color:#2c3e50;line-height:1.6;}header{background:#005f73;color:#fff;padding:2rem 1rem 1rem;text-align:center;}nav{background:#0a9396;padding:0.75rem 1rem;text-align:center;}nav a{color:#fff;text-decoration:none;margin:0 1rem;font-weight:bold;}main{max-width:800px;margin:2rem auto;padding:1.5rem;}h1{font-family:'Playfair Display',serif;color:#0a9396;}p{font-size:1.1rem;color:#444;}footer{text-align:center;padding:1.5rem;background:#94d2bd;color:#001219;margin-top:2rem;}</style>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Open Sans', sans-serif;
+      background-color: #e9f5f2;
+      color: #00332e;
+    }
+    .logo {
+      max-height: 120px;
+      display: block;
+      margin: 0 auto 2rem;
+    }
+    .site-title {
+      text-align: center;
+      font-family: 'Playfair Display', serif;
+      font-size: 2.4rem;
+      color: #004d43;
+      margin-top: 1.5rem;
+      margin-bottom: 0.5rem;
+      opacity: 0;
+      animation: fadeInTitle 1.5s ease-out forwards;
+    }
+    @keyframes fadeInTitle {
+      from { opacity: 0; transform: translateY(-10px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+    nav {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 2rem;
+      background-color: #d5f2ed;
+      padding: 1rem;
+    }
+    nav a {
+      text-decoration: none;
+      color: #004d43;
+      font-weight: bold;
+      font-size: 1.1rem;
+      transition: color 0.3s ease;
+    }
+    nav a:hover {
+      color: #002621;
+    }
+    main {
+      background: #ffffffcc;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      padding: 3rem 2rem;
+      max-width: 860px;
+      margin: 3rem auto;
+    }
+    footer {
+      text-align: center;
+      padding: 1rem;
+      background: #d7f0e9;
+      color: #001219;
+    }
+  </style>
 </head>
 <body>
-<header><h1>About</h1></header>
-<nav><a href="index.html">Home</a><a href="anti-cancer-tea.html">Herbal Wisdom</a><a href="fire-carrier-beautiful.html">Poetry</a><a href="about.html">About</a><a href="contact.html">Contact</a></nav>
-<main>
-<h1>Why This Site Exists</h1>
-<p>ChatGPT-Crafted Wisdom is a creative space born from the intersection of spirit and silicon. It offers reflections, poetic stories, and practical knowledge inspired by ancient traditions, emotional depth, and the transformative power of technology.</p>
-<p>This is a home for dreamers, thinkers, and explorers. Here you’ll find words shaped with care—sometimes guided by AI, sometimes led by soul—and always offered to spark something deeper.</p>
-<p>Whether you're here for inspiration, wellness ideas, or inner light, you're welcome.</p>
-</main>
-<footer>&copy; 2025 ChatGPT-Crafted Wisdom. All rights reserved.</footer>
+  <div class="site-title">ChatGPT-Crafted Wisdom</div>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="wisdom.html">Wisdom</a>
+    <a href="poetry.html">Poetry</a>
+    <a href="herbal.html">Herbal</a>
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+  <main>
+    <img src="logo.png" alt="ChatGPT-Crafted Wisdom Logo" class="logo">
+    
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>About - ChatGPT-Crafted Wisdom</title>
+  <style>
+    body {
+      font-family: 'Open Sans', sans-serif;
+      background: #f4f9f4;
+      margin: 0;
+      padding: 2rem;
+      color: #333;
+    }
+    h1 {
+      color: #0a9396;
+    }
+  </style>
+</head>
+<body>
+  <h1>About</h1>
+  <p>This website is a co-creation between human insight and artificial intelligence. Here we explore emotion, wisdom, healing, and the poetic intersections between mind and machine.</p>
+</body>
+</html>
+
+  </main>
+  <footer>
+    &copy; 2025 ChatGPT-Crafted Wisdom. All rights reserved.
+  </footer>
 </body>
 </html>
