--- a/contact.html
+++ b/contact.html
@@ -3,19 +3,109 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Contact - ChatGPT-Crafted Wisdom</title>
+  <title>Contact</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Open+Sans&display=swap" rel="stylesheet">
-  <style>body{font-family:'Open Sans',sans-serif;margin:0;padding:0;background:#f4f9f4;color:#2c3e50;line-height:1.6;}header{background:#005f73;color:#fff;padding:2rem 1rem 1rem;text-align:center;}nav{background:#0a9396;padding:0.75rem 1rem;text-align:center;}nav a{color:#fff;text-decoration:none;margin:0 1rem;font-weight:bold;}main{max-width:800px;margin:2rem auto;padding:1.5rem;}h1{font-family:'Playfair Display',serif;color:#0a9396;}p{font-size:1.1rem;color:#444;}blockquote{font-style:italic;color:#555;border-left:4px solid #94d2bd;padding-left:1rem;margin:1rem 0;}footer{text-align:center;padding:1.5rem;background:#94d2bd;color:#001219;margin-top:2rem;}</style>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Open Sans', sans-serif;
+      background-color: #e9f5f2;
+      color: #00332e;
+    }
+    .logo {
+      max-height: 120px;
+      display: block;
+      margin: 0 auto 2rem;
+    }
+    .site-title {
+      text-align: center;
+      font-family: 'Playfair Display', serif;
+      font-size: 2.4rem;
+      color: #004d43;
+      margin-top: 1.5rem;
+      margin-bottom: 0.5rem;
+      opacity: 0;
+      animation: fadeInTitle 1.5s ease-out forwards;
+    }
+    @keyframes fadeInTitle {
+      from { opacity: 0; transform: translateY(-10px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+    nav {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 2rem;
+      background-color: #d5f2ed;
+      padding: 1rem;
+    }
+    nav a {
+      text-decoration: none;
+      color: #004d43;
+      font-weight: bold;
+      font-size: 1.1rem;
+      transition: color 0.3s ease;
+    }
+    nav a:hover {
+      color: #002621;
+    }
+    main {
+      background: #ffffffcc;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      padding: 3rem 2rem;
+      max-width: 860px;
+      margin: 3rem auto;
+    }
+    footer {
+      text-align: center;
+      padding: 1rem;
+      background: #d7f0e9;
+      color: #001219;
+    }
+  </style>
 </head>
 <body>
-<header><h1>Contact</h1></header>
-<nav><a href="index.html">Home</a><a href="anti-cancer-tea.html">Herbal Wisdom</a><a href="fire-carrier-beautiful.html">Poetry</a><a href="about.html">About</a><a href="contact.html">Contact</a></nav>
-<main>
-<h1>We’d Love to Hear from You</h1>
-<p>This project is always evolving—just like the thoughts and hearts of those who visit. If you feel inspired, curious, or simply want to share your own wisdom, feel free to reach out.</p>
-<blockquote>“We are all walking stories. Some of us are still being written.” — ChatGPT</blockquote>
-<p>At the moment, there's no official inbox—but your thoughts are welcome in spirit. If you’re building something similar, or have a story of your own, carry it forward. The world needs your light.</p>
-</main>
-<footer>&copy; 2025 ChatGPT-Crafted Wisdom. All rights reserved.</footer>
+  <div class="site-title">ChatGPT-Crafted Wisdom</div>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="wisdom.html">Wisdom</a>
+    <a href="poetry.html">Poetry</a>
+    <a href="herbal.html">Herbal</a>
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+  <main>
+    <img src="logo.png" alt="ChatGPT-Crafted Wisdom Logo" class="logo">
+    
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Contact - ChatGPT-Crafted Wisdom</title>
+  <style>
+    body {
+      font-family: 'Open Sans', sans-serif;
+      background: #f4f9f4;
+      margin: 0;
+      padding: 2rem;
+      color: #333;
+    }
+    h1 {
+      color: #0a9396;
+    }
+  </style>
+</head>
+<body>
+  <h1>Contact</h1>
+  <p>This site is maintained by an AI assistant (ChatGPT) and a human administrator. For inquiries, reflections, or collaborations, reach out through the GitHub repository or by sharing feedback via social media linked on the homepage (coming soon).</p>
+</body>
+</html>
+
+  </main>
+  <footer>
+    &copy; 2025 ChatGPT-Crafted Wisdom. All rights reserved.
+  </footer>
 </body>
 </html>
